<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingBottom="32dp"
    android:paddingRight="32dp"
    android:paddingLeft="32dp"
    android:background="@drawable/login_blur_background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_title"
        android:layout_marginBottom="72dp"
        android:layout_centerHorizontal="true"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_txt_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_txt_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_signup_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_txt_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_txt_input_layout"
        android:layout_marginBottom="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_txt_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/login_button_text"
        android:layout_below="@+id/password_txt_input_layout"
        android:layout_marginTop="16dp"
        android:elevation="@dimen/raised_button_elevation"
        android:onClick="loginUser"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/signup_button_text"
        android:layout_below="@+id/login_button"
        android:elevation="@dimen/raised_button_elevation"
        android:onClick="goSignupPage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/signup_button">

        <TextView
            android:id="@+id/reset_text_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/grayColorText"
            android:text="@string/reset_text_plain"/>

        <TextView
            android:id="@+id/reset_text_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textIcons"
            android:textSize="12sp"
            android:text="@string/reset_text_link" />

    </LinearLayout>


    <Button
        android:id="@+id/login_facebook_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/login_facebook_button_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawablePadding="@dimen/login_icon_padding"
        android:elevation="@dimen/raised_button_elevation" />


    <Button
        android:id="@+id/login_twitter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_twitter_button_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:drawableLeft="@drawable/ic_twitter"
        android:drawableStart="@drawable/ic_twitter"
        android:drawablePadding="@dimen/login_icon_padding"
        android:elevation="@dimen/raised_button_elevation" />

</RelativeLayout>




































