<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_linear_double_height"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card:contentPadding="@dimen/card_padding"
    card:cardElevation="@dimen/card_elevation"
    card:cardCornerRadius="@dimen/card_radius"
    card:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="@dimen/card_simple_linear_height"
            android:layout_marginRight="@dimen/card_padding"
            android:layout_marginEnd="@dimen/card_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/koneko"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community_placeholder_name"
            android:textStyle="bold"
            android:textSize="@dimen/card_title_text_size"
            android:layout_toRightOf="@+id/image"
            android:layout_toEndOf="@+id/image"/>

        <TextView
            android:id="@+id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection_owner_placeholder"
            android:textSize="@dimen/card_property_text_size"
            android:textColor="@color/grayColorText"
            android:layout_below="@+id/name"
            android:layout_toRightOf="@+id/image"
            android:layout_toEndOf="@+id/image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/image"
            android:layout_toEndOf="@+id/image">

            <Button
                android:id="@+id/reject_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/button_reject"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <Button
                android:id="@+id/accept_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/button_accept"
                style="@style/CardAcceptButton"/>


        </LinearLayout>

    </RelativeLayout>



</android.support.v7.widget.CardView>






































