<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_grid_item_height"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card:cardCornerRadius="@dimen/card_radius"
    card:cardElevation="@dimen/card_elevation"
    card:cardPreventCornerOverlap="false">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/koneko"
        android:scaleType="fitStart"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_grid_item_content_height"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:background="@color/twitterColor"
        android:paddingTop="@dimen/card_half_padding"
        android:paddingBottom="@dimen/card_half_padding"
        android:paddingLeft="@dimen/card_half_padding"
        android:paddingStart="@dimen/card_half_padding"
        android:paddingRight="@dimen/card_half_padding"
        android:paddingEnd="@dimen/card_half_padding">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collection_name_placeholder"
            android:textColor="@color/textIcons"
            android:textSize="@dimen/card_title_text_size"
            />

        <TextView
            android:id="@+id/owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collection_owner_placeholder"
            android:textColor="@color/grayColorLight"
            android:textSize="@dimen/card_property_text_size"
            android:layout_below="@+id/name"
            />

        <Button
            android:id="@+id/follow_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/button_text_follow_true"
            android:layout_alignParentBottom="true"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginLeft="-8dp"
            android:layout_marginStart="-8dp"
            android:theme="@style/FollowFlatButton"/>

    </RelativeLayout>


</android.support.v7.widget.CardView>

































